--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company Profile Generator For GPTS</title>
+    <title>Company Profile Generator</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Company Profile Generator For GPTS</h1>
+        <h1>Company Profile Generator</h1>
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'CompanyIntro')">회사소개 자동생성</button>
+            <button class="tablinks" onclick="openTab(event, 'AdditionalFiles')">추가 정보 업로드</button>
             <button class="tablinks" onclick="openTab(event, 'OtherTab2')">Other Tab 2</button>
             <button class="tablinks" onclick="openTab(event, 'OtherTab3')">Other Tab 3</button>
             <button class="tablinks" onclick="logout()">Logout</button>
@@ -23,20 +24,37 @@
                 <textarea id="roleAndGoals" name="roleAndGoals" rows="4" cols="50"></textarea><br><br>
                 <label for="fileInput">파일 업로드:</label>
                 <input type="file" id="fileInput" name="files" accept=".pdf" multiple><br><br>
-                <button type="submit">내용 생성하기</button>
+                <button type="submit">Generate Profiles</button>
             </form>
             <div id="result">
-                <h2>생성결과</h2>
+                <h2>Generated Texts</h2>
                 <form id="saveForm">
-                    <h3>회사소개</h3>
+                    <h3>Company Introduction</h3>
                     <textarea id="companyIntroText" name="company_intro" rows="10" cols="50"></textarea><br>
-                    <h3>브랜드소개</h3>
+                    <h3>Brand Introduction</h3>
                     <textarea id="brandIntroText" name="brand_intro" rows="10" cols="50"></textarea><br>
-                    <h3>제품소개</h3>
+                    <h3>Product Introduction</h3>
                     <textarea id="productIntroText" name="product_intro" rows="10" cols="50"></textarea><br>
-                    <button type="submit">수정된 내용 저장하기</button>
+                    <button type="submit">Save Edited Texts</button>
                 </form>
             </div>
+        </div>
+
+        <div id="AdditionalFiles" class="tabcontent">
+            <h2>추가 정보 업로드</h2>
+            <form id="additionalForm">
+                <div id="additionalFileInputs">
+                    <div class="additionalFileInput">
+                        <label for="filePurpose1">파일 용도:</label>
+                        <input type="text" id="filePurpose1" name="file_purpose" required><br>
+                        <label for="fileName1">파일 이름:</label>
+                        <input type="text" id="fileName1" name="file_name" required><br>
+                        <input type="file" name="files" accept=".txt" required><br>
+                    </div>
+                </div>
+                <button type="button" onclick="addFileInput()">Add another file</button><br><br>
+                <button type="submit">Upload Additional Files</button>
+            </form>
         </div>
 
         <div id="OtherTab2" class="tabcontent">
