--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,12 +45,15 @@
         <div id="AdditionalFiles" class="tabcontent">
             <h2>추가 정보 업로드</h2>
             <form id="additionalForm">
-                <div class="additionalFileInput">
-                    <label for="filePurpose">파일 용도:</label>
-                    <input type="text" id="filePurpose" name="file_purpose" required><br>
-                    <label for="fileName">파일 이름:</label>
-                    <input type="text" id="fileName" name="file_name" required><br>
-                    <textarea id="fileContent" name="file_content" rows="10" cols="50" required></textarea><br>
+                <div id="additionalFileInputs">
+                    <div class="additionalFileInput">
+                        <label for="filePurpose1">파일 용도:</label>
+                        <input type="text" id="filePurpose1" name="file_purpose" required><br>
+                        <label for="fileName1">파일 이름:</label>
+                        <input type="text" id="fileName1" name="file_name" required><br>
+                        <textarea id="fileContent1" name="file_content" rows="10" cols="50" required></textarea><br>
+                        <button type="button" onclick="removeFileInput(this)">Remove this file</button><br>
+                    </div>
                 </div>
                 <button type="button" onclick="addFileInput()">Add another file</button><br><br>
                 <button type="submit">Upload Additional Files</button>
