작동안하던기능 수정

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,7 +45,7 @@
         <div id="AdditionalFiles" class="tabcontent">
             <h2>추가 정보 업로드</h2>
             <form id="additionalForm">
-                <div id="additionalFileInputs">
+                <div id="additionalFileInputsContainer">
                     <div class="additionalFileInput">
                         <label for="filePurpose1">파일 용도:</label>
                         <input type="text" id="filePurpose1" name="file_purpose" required><br>
