버튼이 이상한곳에 있었네요

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,9 +34,7 @@
                     <h3>Brand Introduction</h3>
                     <textarea id="brandIntroText" name="brand_intro" rows="10" cols="50"></textarea><br>
                     <h3>Product Introduction</h3>
-                    <textarea id="productIntroText" name="product_intro" rows="10" cols="50"></textarea><br>
-                    <div id="additionalFileInputs"></div>
-                    <button type="button" onclick="addFileInput()">Add another file</button><br><br>
+                    <textarea id="productIntroText" name="product_intro" rows="10" cols="50"></textarea><br><br>
                     <button type="submit">Save Edited Texts</button>
                 </form>
             </div>
