--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,15 +8,15 @@
 </head>
 <body>
     <div class="container">
-        <h1>Company Profile Generator</h1>
+        <h1>브랜드 정보관리 for gpt</h1>
         <div class="tab">
-            <button class="tablinks" onclick="openTab(event, 'CompanyIntro')">회사소개 자동생성</button>
+            <button class="tablinks" onclick="openTab(event, 'CompanyIntro')">브랜드 정보</button>
             <button class="tablinks" onclick="openTab(event, 'Chatbots')">Chatbots</button>
             <button class="tablinks" onclick="logout()">Logout</button>
         </div>
 
         <div id="CompanyIntro" class="tabcontent">
-            <h2>회사소개 자동생성</h2>
+            <h2>브랜드 정보</h2>
             <form id="uploadForm">
                 <label for="roleAndGoals">역할과 목표:</label>
                 <textarea id="roleAndGoals" name="roleAndGoals" rows="4" cols="50"></textarea><br><br>
